Fixed nav link spacing. Added navbar to projects page. created contact controller.

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -13,17 +13,18 @@ html {
 
 // Homepage //
 
+.topnav {
+  height: 55px;
+  background: transparent;
+}
+
 .menu {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
   float: right;
-}
-
-.menu {
   text-align: center;
-  font-size: 50px;
 }
 
 .menu li {
@@ -37,9 +38,8 @@ html {
   text-decoration: none;
   float: right;
   font-family: "Muli", serif;
-  font-size: 23px;
+  font-size: 24px;
   display: block;
-  padding: 15px 7px;
   margin-right: 15px;
 }
 
@@ -101,7 +101,7 @@ button:active {
   }
 
   .menu li {
-    padding: 10px 10px;
+    padding: 15px 30px;
   }
 }
 
@@ -121,3 +121,16 @@ button:active {
 }
 
 // Projects page //
+
+.projectsnav {
+  background-color: #3b3b3b;
+  height: 62px;
+  width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .menu {
+    justify-content: center;
+    width: 100%;
+  }
+}
